# spacejim

./: .pre-commit-config.yaml  pyproject.toml
.github/: renovate.json
.github/workflows/: CI.yml
docs/: requirements.txt
example/: GW150914_like_injection_Pv2.py  GW170817_IMRPhenomPV2.py
src/jimgw/core/: jim.py  prior.py
src/jimgw/core/population/: injection_util.py
src/jimgw/core/single_event/: data.py  detector.py  likelihood.py  polarization.py  transforms.py  utils.py
src/jimgw/core/single_event/space_based/: space_detector.py
src/jimgw/run/: run_definition.py  run_manager.py
tests/cross_validation/: .gitignore  test_likelihood.py  test_sky_transforms.py  test_spin_transforms.py
tests/unit/: test_detector.py  test_jim.py  test_likelihood.py  test_prior.py  test_transform.py
