[project]
name = "jimgw"
version = "0.3.0"
description = "Gravitatioanl wave data analysis tool in Jax"
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{name = "Kaze W. K. Wong", email = "kazewong.physics@gmail.com"},
]
maintainers = [
  {name = "Thomas Ng", email = "thomas.ng@nikhef.nl"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

dependencies = [
    "astropy>=7.0.1",
    "beartype>=0.19.0",
    "flowmc>=0.4.5",
    "gwpy>=3.0.12",
    "jax>=0.8.2",
    "jaxtyping>=0.3.3",
    "ripplegw>=0.0.9",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda]>=0.8.2",
]
visualize = [
    "corner>=2.2.3",
    "matplotlib>=3.10.7",
]

[dependency-groups]
test = [
    "pre-commit>=4.2.0",
    "coverage>=7.7.0",
    "coveralls>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.2",
    "pyright>=1.1.402",
]
cross-validation = [
    "lalsuite>=7.26.4",
    "bilby[gw]>=2.8.0",
]
doc = [
    "mkdocs-gen-files==0.6.0",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.3",
    "pymdown-extensions==10.20.1",
]

[project.urls]
Homepage = "https://github.com/GW-JAX-Team/jim"
Documentation = "https://jim.readthedocs.io"
Repository = "https://github.com/GW-JAX-Team/jim"
"Bug Tracker" = "https://github.com/GW-JAX-Team/jim/issues"
Changelog = "https://github.com/GW-JAX-Team/jim/releases"

[tool.uv.sources]
jimgw = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["tests/integration", "tests/cross_validation"]

[tool.pyright]
include = ["src"]

[tool.ruff.lint]
ignore = ["F722"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\. )?abstractmethod",
]
